Fixed border and spacing on consultation button on all html pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,8 +288,6 @@ th, td {
 /*-------------------------------Modal-Form*/
 
 .far.fa-calendar-alt.fa-lg {
- 
-    border: none;
     color: #969FAA;
 }
 
